--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: static
+  name: static_devployment
   namespace: static
 spec:
   selector:
@@ -15,20 +15,6 @@ spec:
     spec:
       containers:
       - name: static
-        image: 861431775398.dkr.ecr.us-east-2.amazonaws.com/k8s:12
+        image: 861431775398.dkr.ecr.us-east-2.amazonaws.com/k8s:16
         ports:
         - containerPort: 80
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: static
-  namespace: static
-spec:
-  selector: 
-    app: static
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-
